--- a/index.html
+++ b/index.html
@@ -18,31 +18,38 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="css/main.min.css" />
+
     <title>Frontend Mentor | Profile Card Component</title>
   </head>
   <body>
     <main class="main">
-      <div class="cerd__content">
-        <div class="crad__photo">
-          <img src="/images/image-victor.jpg" alt="Victor" />
-        </div>
-        <div class="card__detail">
-          <p class="card__name">
-            Victor Crest <span class="card__age">26</span>
-          </p>
-          <p class="card__location">London</p>
-        </div>
-        <div class="card__social--detail">
-          <p class="card__title">80K</p>
-          <p class="card__text">Followers</p>
-        </div>
-        <div class="card__social--detail">
-          <p class="card__title">803K</p>
-          <p class="card__text">Likes</p>
-        </div>
-        <div class="card__social--detail">
-          <p class="card__title">1.4K</p>
-          <p class="card__text">Photos</p>
+      <div class="card">
+        <div class="card__content">
+          <div class="card__photo">
+            <img src="/images/image-victor.jpg" alt="Victor" />
+          </div>
+          <div class="card__detail">
+            <p class="card__name">
+              Victor Crest <span class="card__age">26</span>
+            </p>
+            <p class="card__location">London</p>
+          </div>
+
+          <div class="card__social">
+            <div class="card__social--detail">
+              <p class="card__social--title">80K</p>
+              <p class="card__social--text">Followers</p>
+            </div>
+            <div class="card__social--detail">
+              <p class="card__social--title">803K</p>
+              <p class="card__social--text">Likes</p>
+            </div>
+            <div class="card__social--detail">
+              <p class="card__social--title">1.4K</p>
+              <p class="card__social--text">Photos</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
