--- a/index.html
+++ b/index.html
@@ -25,30 +25,33 @@
   <body>
     <main class="main">
       <div class="card">
-        <div class="card__content">
-          <div class="card__photo">
-            <img src="/images/image-victor.jpg" alt="Victor" />
+        <div class="card__bg--top"></div>
+        <div class="card__description">
+          <div class="card__image">
+            <img
+              src="/images/image-victor.jpg"
+              alt="Victor"
+              class="crad__photo"
+            />
           </div>
-          <div class="card__detail">
-            <p class="card__name">
-              Victor Crest <span class="card__age">26</span>
-            </p>
-            <p class="card__location">London</p>
-          </div>
+          <p class="card__name">
+            Victor Crest <span class="card__age">26</span>
+          </p>
+          <p class="card__location">London</p>
+        </div>
 
-          <div class="card__social">
-            <div class="card__social--detail">
-              <p class="card__social--title">80K</p>
-              <p class="card__social--text">Followers</p>
-            </div>
-            <div class="card__social--detail">
-              <p class="card__social--title">803K</p>
-              <p class="card__social--text">Likes</p>
-            </div>
-            <div class="card__social--detail">
-              <p class="card__social--title">1.4K</p>
-              <p class="card__social--text">Photos</p>
-            </div>
+        <div class="card__stats">
+          <div class="card__stats--item">
+            <p class="card__stats--count">80K</p>
+            <p class="card__stats--text">Followers</p>
+          </div>
+          <div class="card__stats--item">
+            <p class="card__stats--count">803K</p>
+            <p class="card__stats--text">Likes</p>
+          </div>
+          <div class="card__stats--item">
+            <p class="card__stats--count">1.4K</p>
+            <p class="card__stats--text">Photos</p>
           </div>
         </div>
       </div>
