Adjusted HTML markup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       rel="icon"
       type="image/png"
@@ -19,23 +20,22 @@
     />
 
     <link rel="stylesheet" href="css/main.min.css" />
-
-    <title>Frontend Mentor | Profile Card Component</title>
+    <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
     <main class="main">
       <div class="card">
-        <div class="card__bg--top"></div>
+        <div class="card__top--bg"></div>
         <div class="card__description">
           <div class="card__image">
             <img
               src="/images/image-victor.jpg"
               alt="Victor"
-              class="crad__photo"
+              class="card__photo"
             />
           </div>
           <p class="card__name">
-            Victor Crest <span class="card__age">26</span>
+            Victor Crest <span class="card__age"> 26</span>
           </p>
           <p class="card__location">London</p>
         </div>
