Updated the HTML markup

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               class="card__photo"
             />
           </div>
-          <p class="card__name">
+          <h1 class="card__name">
             Victor Crest <span class="card__age"> 26</span>
-          </p>
+          </h1>
           <p class="card__location">London</p>
         </div>
 
